2005-04-25  Tim-Philipp Müller  <tim at centricular dot net>

	* NEWS:
	* src/conn-http.c: (gnet_conn_http_new),
	(gnet_conn_http_emit_event), (gnet_conn_http_done),
	(gnet_conn_http_conn_parse_response_headers),
	(gnet_conn_http_conn_recv_chunk_body),
	(gnet_conn_http_conn_recv_nonchunked_data),
	(gnet_conn_http_conn_cb), (gnet_conn_http_ia_cb),
	(gnet_conn_http_delete_internal), (gnet_conn_http_delete):
	  Make sure the http connection can be deleted from within
	  the user callback. Do not emit _DATA_PARTIAL or _DATA_COMPLETE
	  if we are going to be redirected to a different target anyway.

	* tests/conn_http_test.c: (http_async_callback), (test_get_async),
	(main):
	  Add some test cases for GConnHttp in async mode.

2005-04-25  Tim-Philipp Müller  <tim at centricular dot net>

	* doc/tmpl/conn-http.sgml:
	  Add GNET_CONN_HTTP_ERROR_HOSTNAME_RESOLUTION
	  
	* src/conn-http.c: (gnet_conn_http_new),
	(gnet_conn_http_set_header), (gnet_conn_http_set_user_agent),
	(gnet_conn_http_set_uri), (gnet_conn_http_set_method),
	(gnet_conn_http_conn_cb), (gnet_conn_http_ia_cb),
	(gnet_conn_http_run_async), (gnet_conn_http_run),
	(gnet_conn_http_steal_buffer), (gnet_conn_http_delete),
	(gnet_conn_http_cancel), (gnet_conn_http_set_timeout):
	* src/conn-http.h:
	  Actually do emit an error when we couldn't resolve the
	  hostname; add some pseudo-typesafety by adding a magic
	  cookie to the beginning of the structure and checking
	  that cookie in all public gnet_conn_http_*() functions;
	  add GNET_CONN_HTTP_ERROR_HOSTNAME_RESOLUTION; make sure
	  there are no trailing commas after the last enum value
	  in enumerations (gcc-2.9x does not seem to like that).
	  
2005-04-13  Tim-Philipp Müller  <tim at centricular dot net>

	* acinclude.m4:
	  Added pkg.m4

	* configure.ac:
	  Drop support for GLib-1.2

	* configure.ac:
	* src/gnet-private.h:
	* src/udp.c: (gnet_udp_socket_send):
	  Check for struct sockaddr_storage family member;